--- a/templates/details.html
+++ b/templates/details.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <style>
 table,tr, th, td{
   border: 1px solid black;
 }
 
 </style>
-
 </head>
 <body>
 <div>
@@ -32,6 +37,9 @@ table,tr, th, td{
         {% endfor %}
         </tbody>
     </table>
+</div>
+<div>
+    <a href="{% url 'export_excel' %}">Download Excel sheet</a>
 </div>
 
 </body>
