--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,20 +1,28 @@
 {% load static %}
 <html lang="en-us">
 <head>
-<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
 </head>
 <body class=" app-core model-field change-form" >
  <p class="font-weight-bold h1" style="text-align:center; color:#4D2994; font-size: 350%;">TimeSheet</p>
-    <div id="content-main" style="color:#4D2994">
-    <form  action="{% url 'save' %}"method="post">
+    <div id="content-main" style="color:#4D2994" class="container-fluid">
+    <form  class="form-horizontal" action="{% url 'save' %}"method="post">
         {% csrf_token %}
         {{task_form.as_p}}
         <fieldset class="module aligned ">
-            <div class="form-row field-role">
-                <div>
-                    <label class="required" for="id_role">Role:</label>
-                    <div class="related-widget-wrapper">
+            <!--<div class="form-row field-role">-->
+                <div class="row">
+                    <div class="col-2">
+                    <label  for="id_role">Role:</label>
+                        </div>
+                    <div class="col-10">
                         <select name="role_name" required="" id="id_role" onchange="javascript: dynamicdropdown(this.options[this.selectedIndex].value);">
                             <option value="QA" selected >QA</option>
                             <option value="Dev" >Dev</option>
@@ -22,33 +30,43 @@
                         </select>
                     </div>
                 </div>
-            </div>
-            <div class="form-row field-team_member">
-                <div>
-                    <label class="required">Team member:</label>
+            <!--</div>-->
+            <!--<div class="form-row field-team_member">-->
+                <div class="row">
+                    <div class="col-2">
+                    <label >Team member:</label>
+                        </div>
+                    <div class="col-10">
                     <script type="text/javascript" language="JavaScript">
                         document.write('<select name="mem_name" id="status"><option value="">--Select--</option></select>')
                         </script>
                         <noscript>
-                            <select id="mem_name" name="mem_name"></select>
+                            <div class="col-sm-10">
+                                <select id="mem_name" name="mem_name"></select>
+                                </div>
                         </noscript>
+                        </div>
                 </div>
-            </div>
-             <div class="form-row field-team_name">
-                <div>
+            <!--</div>-->
+             <div class="row">
+                <div class="col-2">
                     <label class="required">Team Name:</label>
+                    </div>
+                 <div class="col-10">
                     <script type="text/javascript" language="JavaScript">
                         document.write('<select name="team_name" id="status"><option value="iceman">iceman</option></select>')
                         </script>
                         <noscript>
                             <select id="team_name" name="team_name"></select>
                         </noscript>
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-row field-category">
-            <div>
+            <div class="row">
+             <div class="col-2">
                 <label class="required" for="id_category">Category:</label>
+            </div>
+                <div class="col-10">
                 <select type="text" name="category" class="vTextField"  required="" id="id_category" onchange="javascript: pto(this.options[this.selectedIndex].value);">
                     <option value=" "> </option>
                     <option value="story">Story</option>
@@ -59,10 +77,11 @@
             </div>
 
 
-
-            <div class="form-row field-jira_ticket">
-                <div>
+            <div class="row">
+                <div class="col-2">
                     <label class="required" for="id_jira_ticket_type">Jira ticket type:</label>
+                 </div>
+                <div class="col-10">
                     <select name="jira_ticket_type" id="id_jira_ticket_type">
                         <option value=""> </option>
                         <option value="eng">ENG</option>
@@ -70,37 +89,42 @@
                     </select>
 
                 </div>
-                <div>
-                    <label class="required" for="id_jira_ticket_number">Jira ticket number:</label>
-                    <input type="number" name="jira_ticket_number" class="vIntegerField" maxlength="20" id="id_jira_ticket_number">
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                    <label class="required" for="id_jira_ticket_number">Jira ticket number:</label></div>
+                    <div class="col-10">
+                    <input type="number" name="jira_ticket_number" class="vIntegerField" maxlength="20" id="id_jira_ticket_number"></div>
                 </div>
 
-            </div>
-
-            <div class="form-row field-description">
-                <div>
-                    <label class="required" for="id_description">Description:</label>
+            <div class="row">
+                <div class="col-2">
+                    <label class="required" for="id_description">Description:</label></div>
+                <div class="col-10">
                     <input type="text" name="description" size="40" class="vTextField" maxlength="100" required="" id="id_description">
                 </div>
             </div>
-            <div class="form-row field-sprint">
-                <div>
-                    <label class="required" for="id_sprint">Sprint:</label>
+            <div class="row">
+                <div class="col-2">
+                    <label class="required" for="id_sprint">Sprint:</label></div>
+                <div class="col-10">
                     <input type="text" name="sprint" class="vTextField" maxlength="20" required="" id="id_sprint">
                 </div>
             </div>
 
-        <div class="form-row field-hours">
-            <div>
-                <label class="required" for="id_hours">Hours:</label>
+        <div class="row">
+            <div class="col-2">
+                <label class="required" for="id_hours">Hours:</label></div>
+            <div class="col-10">
                 <input type="number" name="hours" class="vIntegerField" required="" id="id_hours" value="8">
             </div>
 
         </div>
 
-        <div class="form-row field-week">
-            <div>
-                <label class="required">Date</label>
+        <div class="row">
+            <div class="col-2">
+                <label class="required">Date</label></div>
+            <div class="col-10">
                  <input type="date" name="date" id="date">
             </div>
         </div>
@@ -108,6 +132,7 @@
 
         <input type="submit" value="Save" class="default" name="_save">
     </form>
+
  </div>
 </body>
   <script>
