--- a/templates/success.html
+++ b/templates/success.html
@@ -1,6 +1,7 @@
 {% load static %}
 <html>
 <head>
+    <title>Added Data</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
 </head>
