--- a/templates/success.html
+++ b/templates/success.html
@@ -16,11 +16,10 @@
 {% endif %}
 </div>
 <div>
-<p>Role: {{t.role.role_name}}</p>
-<p>Team Member: {{t.team_name.mem_name}}</p>
-<p>Team Name: {{t.team_name.team_name}}</p>
+<p>Role: {{t.team.team_name}}</p>
+<p>Team Member: {{t.team.mem_name}}</p>
 <p> Category: {{t.category.category}}</p>
-<p>Jira Ticket: {{t.jjira_ticket_type}}-{{t.jira_ticket_number}}</p>
+<p>Jira Ticket: {{t.jira_ticket_type}}-{{t.jira_ticket_number}}</p>
 <p>Description: {{t.description}}</p>
 <p>Sprint: {{t.sprint}}</p>
 <p>Hours: {{t.hours}}</p>
