--- a/templates/generate_report.html
+++ b/templates/generate_report.html
@@ -30,6 +30,7 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
+<a href="/export_excel/">Download excel</a>
 
 </body>
 </html>
