--- a/templates/report.html
+++ b/templates/report.html
@@ -1,34 +1,21 @@
+<!--<app>/templates/contact-us.html-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Fetch Report</title>
-     <style>
-      #heading{
-                background-color : blue;
-                text-align : center;
-      }
-      table,tr, th, td{
-                 border: 1px solid black;
-                 text-align : center;
-            }
-            .button {
-                      background-color: #4CAF50; /* Green */
-                      border: none;
-                      color: white;
-                      padding: 15px 32px;
-                      text-align: center;
-                      text-decoration: none;
-                      display: inline-block;
-                      margin: 4px 2px;
-                      cursor: pointer;
-                    }
 
-            .button1 {font-size: 10px;}
-    </style>
+<head>
+    <title>Work Details</title>
 </head>
+
 <body>
-<table class="table table-bordered">
+
+    <form action="." method="POST">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit">SUBMIT</button>
+    </form>
+
+    {% if worklog_data %}
+     <table class="table table-bordered">
          <tr>
                 <th>Team</th>
                 <th>Jira Ticket Type</th>
@@ -40,7 +27,7 @@
                 <th>Date</th>
                 <th>Hours</th>
          </tr>
-         {% for data in context_data %}
+         {% for data in worklog_data %}
          <tr>
                 <td>{{data.member.group_name.group_name}}</td>
                 <td>{{data.task.jira_ticket_type}}</td>
@@ -53,7 +40,9 @@
                 <td>{{data.hours}}</td>
          </tr>
          {% endfor %}
-     </table>
+     </table>   
+    {% endif %} 
 
 </body>
+
 </html>
