--- a/templates/report.html
+++ b/templates/report.html
@@ -1,48 +1,98 @@
-<!--<app>/templates/contact-us.html-->
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% load widget_tweaks %}
+{% load static %}
+{% block content %}
+<!-- Page Heading -->
 
-<head>
-    <title>Work Details</title>
-</head>
-
-<body>
-    {{ form.media }}
-    <form action="." method="POST">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">SUBMIT</button>
-    </form>
+<div class="d-sm-8 align-items-center justify-content-between mb-4">
+   <div class="card shadow mb-4">
+      <div class="card-header py-3">
+         <h6 class="m-0 font-weight-bold text-primary">Report</h6>
+      </div>
+      <div class="card-body">
+         {{ form.media }}
+         <form method="post" action="" class="form-horizontal" id="form_sample_2" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+            {% endfor %}
+            {% for field in form %}
+            {{field.error}}
+            <div class="form-group row">
+               <label class="col-md-2 control-label" for="{{ field.id_for_label }}"
+                  id='{{field.label}}'>
+                  <p align="left">{{ field.label }}
+                     {% if field.field.required %}
+                     <span class="special_class">*</span>
+                     {% endif %}
+                  </p>
+               </label>
+               {% for error in field.errors %}
+               <span class="tips" style="color:red">{{ error }}</span>
+               {% endfor %}
+               <div class="col-md-4">
+                  <div class="input-icon right">
+                     {% render_field field class+="form-control input-circle" %}
+                  </div>
+               </div>
+            </div>
+            {% endfor %}
+            <div class="form-actions row justify-content-center col-md-6">
+               <button type="submit" class="btn btn-primary" title="Submit">Submit</button>
+            </div>
+         </form>
+      </div>
 
     {% if worklog_data %}
-     <table class="table table-bordered">
-         <tr>
-                <th>Team</th>
-                <th>Jira Ticket Type</th>
-                <th>Jira Ticket Number</th>
-                <th>Description</th>
-                <th>Sprint</th>
-                <th>Team Member</th>
-                <th>Category</th>
-                <th>Date</th>
-                <th>Hours</th>
-         </tr>
-         {% for data in worklog_data %}
-         <tr>
-                <td>{{data.member.group_name.group_name}}</td>
-                <td>{{data.task.jira_ticket_type}}</td>
-                <td>{{data.task.jira_ticket_number}}</td>
-                <td>{{data.task.description}}</td>
-                <td>{{data.task.sprint}}</td>
-                <td>{{data.member.name}}</td>
-                <td>{{data.task.category.category_name}}</td>
-                <td>{{data.work_date}}</td>
-                <td>{{data.hours}}</td>
-         </tr>
-         {% endfor %}
-     </table>   
-    {% endif %} 
+    <!-- DataTales -->
+      <div class="card shadow mb-4">
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+              <thead>
+                <tr>
+                    <th>Team</th>
+                    <th>Jira Ticket Type</th>
+                    <th>Jira Ticket Number</th>
+                    <th>Description</th>
+                    <th>Sprint</th>
+                    <th>Team Member</th>
+                    <th>Category</th>
+                    <th>Date</th>
+                    <th>Hours</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for data in worklog_data %}
+                <tr>
+                    <td>{{data.member.group_name.group_name}}</td>
+                    <td>{{data.task.jira_ticket_type}}</td>
+                    <td>{{data.task.jira_ticket_number}}</td>
+                    <td>{{data.task.description}}</td>
+                    <td>{{data.task.sprint}}</td>
+                    <td>{{data.member.name}}</td>
+                    <td>{{data.task.category.category_name}}</td>
+                    <td>{{data.work_date}}</td>
+                    <td>{{data.hours}}</td>
+                 </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      {% endif %} 
+   </div>
+</div>
+{% endblock %}
 
-</body>
+{% block js %}
+<!-- BEGIN JS -->
+  <!-- Page level plugins -->
+  <script src="{% static "vendor/datatables/jquery.dataTables.min.js" %}"></script>
+  <script src="{% static "vendor/datatables/dataTables.bootstrap4.min.js" %}"></script>
 
-</html>
+  <!-- Page level custom scripts -->
+  <script src="{% static "js/demo/datatables-demo.js" %}"></script>
+<!-- END JS -->
+{% endblock %}
