--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
 {% extends "skeleton.html" %}
 
 	{% block top-nav %}
-		{% include "top_nav.html" %}
 	{% endblock %}
 
 	{% block sidebar %}
+		{% include "sidebar.html" %}
 	<!-- <div class="page-sidebar-wrapper"> -->
 	<!-- </div> -->
 	{% endblock %}
