--- a/templates/report.html
+++ b/templates/report.html
@@ -27,13 +27,10 @@
                 {% endfor %}
                 <div class="row">
                 <div class="form-actions row justify-content-center col-md-3">
-                    <input type="submit" class="btn btn-primary" title="Submit" value="submit" name="_submit">
+                    <input type="submit" class="btn btn-primary" title="Submit" value="Submit" name="_submit">
                 </div>
                 <div class="form-actions row justify-content-center col-md-3">
-                    <input type="submit" class="btn btn-primary" title="Download report" value="download" name="_download">
-                </div>
-                <div class="form-actions row justify-content-center col-md-3">
-                    <input type="submit" class="btn btn-primary" title="Add" value="add" name="_add" src="/">
+                    <input type="submit" class="btn btn-primary" title="Download report" value="Download Report" name="_download">
                 </div>
 
                 </div>
@@ -50,8 +47,7 @@
                         <thead>
                             <tr>
                                 <th>Team</th>
-                                <th>Jira Ticket Type</th>
-                                <th>Jira Ticket Number</th>
+                                <th>Jira Ticket</th>
                                 <th>Description</th>
                                 <th>Sprint</th>
                                 <th>Team Member</th>
@@ -66,8 +62,7 @@
                             <tr>
                                 {% if data.is_deleted == False %}
                                 <td>{{data.member.group_name.group_name}}</td>
-                                <td>{{data.task.jira_ticket_type}}</td>
-                                <td>{{data.task.jira_ticket_number}}</td>
+                                <td>{{data.task.jira_ticket_type}} {{data.task.jira_ticket_number}}</td>
                                 <td>{{data.task.description}}</td>
                                 <td>{{data.task.sprint}}</td>
                                 <td>{{data.member.name}}</td>
