--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,25 +1,29 @@
 <!-- Sidebar -->
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-  <!-- Sidebar - Brand -->
-  <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
-    <div class="sidebar-brand-icon rotate-n-15">
-<!--       <i class="fas fa-laugh-wink"></i> -->
-    </div>
-    <div class="sidebar-brand-text mx-3">Valuelabs LLP</div>
-  </a>
+  <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/"> </a>
 
   <!-- Divider -->
   <hr class="sidebar-divider my-0">
-
-  <!-- Nav Item - Dashboard -->
+  <li class="nav-item active">
+    <a class="nav-link" href="{% url 'home_view' %}">
+      <i class="fa fa-plus"></i>
+      <span>Add</span></a>
+  </li>
+  <hr class="sidebar-divider my-0">
+  <li class="nav-item active">
+    <a class="nav-link" href="{% url 'report_view' %}">
+      <i class="fa fa-eye"></i>
+      <span>View Report</span></a>
+  </li>
+  <hr class="sidebar-divider my-0">
   <li class="nav-item active">
     <a class="nav-link" href="/">
-      <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Dashboard</span></a>
+      <i class="fa fa-comments"></i>
+      <span>Feedback</span></a>
   </li>
 
-  <!-- Divider -->
+
   <hr class="sidebar-divider d-none d-md-block">
 
   <!-- Sidebar Toggler (Sidebar) -->
