Feedback List and other modifications

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -44,11 +44,29 @@
             </div>
             {% endfor %}
             <div class="form-actions row justify-content-center col-md-6">
-               <button type="submit" class="btn btn-primary" title="Submit">Submit</button>
+               <!-- <button type="submit" class="btn btn-primary" title="Submit">Submit</button> -->
+               <button type="submit" title="Submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Submit</button>
+               <!-- <div class="modal fade" id="myModal" role="dialog">
+                     <div class="modal-dialog">
+                       <div class="modal-content">
+                         <div class="modal-header">
+                           <button type="button" class="close" data-dismiss="modal">&times;</button>
+                         </div>
+                         <div class="modal-body">
+                           <p>Are you sure you want to submit the entry?</p>
+                         </div>
+                         <div class="modal-footer">
+                             <a  class="btn btn-primary" href="{% url 'feedback_view' %}">Submit</a>
+                             <button class="btn btn-primary" data-dismiss="modal">Close</button>
+                         </div>
+                       </div>
+
+                     </div>
+                  </div> -->
             </div>
          </form>
       </div>
-   </div>
+   </div>   
 </div>
 
 
