--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -13,7 +13,7 @@
 <div class="d-sm-8 align-items-center justify-content-between mb-4">
    <div class="card shadow mb-4">
       <div class="card-header py-3">
-         <h6 class="m-0 font-weight-bold text-primary">Worklog</h6>
+         <h6 class="m-0 font-weight-bold text-primary">Feedback Form</h6>
       </div>
       <div class="card-body">
          {{ form.media }}
