--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -22,6 +22,12 @@
       <i class="fa fa-comments"></i>
       <span>Feedback</span></a>
   </li>
+  <hr class="sidebar-divider my-0">
+  <li class="nav-item active">
+    <a class="nav-link" href="\">
+      <i class="fa fa-list-alt"></i>
+      <span>Feedback List</span></a>
+  </li>
 
 
   <hr class="sidebar-divider d-none d-md-block">
