--- a/templates/report.html
+++ b/templates/report.html
@@ -54,7 +54,7 @@
                                 <th>Category</th>
                                 <th>Date</th>
                                 <th>Hours</th>
-                                <th colspan="2">Option</th>
+                                <th colspan="2">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
