--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,8 +7,8 @@
   <hr class="sidebar-divider my-0">
   <li class="nav-item active">
     <a class="nav-link" href="{% url 'home_view' %}">
-      <i class="fa fa-plus"></i>
-      <span>Add</span></a>
+      <i class="fa fa-plus-square"></i>
+      <span>Log Work</span></a>
   </li>
   <hr class="sidebar-divider my-0">
   <li class="nav-item active">
@@ -36,4 +36,3 @@
   </div>
 
 </ul>
-<!-- End of Sidebar -->
